--- a/ynovtranslate/packages/app/package.json
+++ b/ynovtranslate/packages/app/package.json
@@ -14,6 +14,7 @@
     "lint": "backstage-cli package lint"
   },
   "dependencies": {
+    "@backstage-community/plugin-github-actions": "^0.6.26",
     "@backstage/app-defaults": "^1.5.13",
     "@backstage/catalog-model": "^1.7.1",
     "@backstage/cli": "^0.29.0",
@@ -40,6 +41,7 @@
     "@backstage/theme": "^0.6.1",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
+    "@parsifal-m/plugin-dev-quotes-homepage": "^3.0.7",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-router": "^6.3.0",
